--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -708,7 +708,7 @@
           <!-- Level one dropdown -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              External Links 🎈
+              External<br>Links 🎈
             </a>
 
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown8">
