Added Scope MT5 Download

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -315,6 +315,8 @@
                     <li><a class="dropdown-item" href="https://pentaho.match-trade.com/pentaho/Home">Bridge Match Report</a></li>
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item" href="https://live4.fx-edge.com/web/login">FX Edge Login</a></li>
+                    <li><a class="dropdown-item" href="https://www.scopemarkets.com/en/platforms/mt5">Scope MT5 Download</a></li>
+
 
 
                   </ul>
