--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -167,7 +167,7 @@
 
             {% if current_user.role in ["Admin", "Risk", "Risk_TW", "Dealing", "Risk_UK", "Risk_KH", "Finance", "CS"] %}
 
-            <li class="nav-item navbar-text dropdown">
+            <li class="nav-item  dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Risk<br>Tools 🛠
               </a>
@@ -420,7 +420,7 @@
 
           <!-- Level one dropdown -->
           {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
-          <li class="nav-item navbar-text dropdown">
+          <li class="nav-item   dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Analytics<br>and Data 📈
             </a>
@@ -526,7 +526,7 @@
         {% endif %}
 
         {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
-          <li class="nav-item navbar-text dropdown">
+          <li class="nav-item   dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               M.Y 🌹
             </a>
@@ -578,7 +578,7 @@
 
         {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
 
-        <li class="nav-item navbar-text dropdown">
+        <li class="nav-item   dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Yudi 👾
           </a>
@@ -710,7 +710,7 @@
 
 
           <!-- Level one dropdown -->
-          <li class="nav-item navbar-text dropdown">
+          <li class="nav-item   dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               External<br>Links 🎈
             </a>
@@ -860,7 +860,7 @@
           </li>
           {% else %}
 
-            <li class="nav-item navbar-text dropdown">
+            <li class="nav-item   dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown9" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 User 🙍‍♂️🙍‍♀️
               </a>
