Updated for AIF

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -333,6 +333,10 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item" href="https://live4.fx-edge.com/web/login">FX Edge Login</a></li>
                     <li><a class="dropdown-item" href="https://www.scopemarkets.com/en/platforms/mt5">Scope MT5 Download</a></li>
+                    <li><a class="dropdown-item" href="https://manager-api-demo.fx-edge.com/swagger-ui/index.html?configUrl=/v3/api-docs/swagger-config#/">FX Edge API Docs</a></li>
+
+
+
 
 
 
