--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -911,13 +911,13 @@
   {% block content %}
   <div class="main_body">
 
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
 
     {% if messages %}
     <div id="flash_div_1">
     <br>
-    {% for message in messages %}
-    <div class="alert alert-info text-center" role="alert">{{ message }}</div>
+    {% for category, message in messages %}
+    <div class="alert alert-info text-center {{ category }}" role="alert">{{ message }}</div>
     {% endfor %}
 
     </div>
