--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -465,22 +465,49 @@
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.BGI_Symbol_Float') }}">MT4 Symbol Floating 🎶 </a></li>
                     <li><a class="dropdown-item" href="{{ url_for('mt5_monitoring.BGI_MT5_Symbol_Float') }}">MT5 Symbol Floating 🎶 </a></li>
-                    <div class="dropdown-divider"></div>
-
-
-
-                    <li><a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_2/by_country/tableFLOATshowing2.html">Country Float [PHP] 🌹</a></li>
-                    <li><a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_2/by_symbol/tableFLOATsymbol0.html">Symbol Float [PHP] 🌹 </a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="http://192.168.20.117:81/www/main.html">Main [PHP] 🌹</a></li>
-                    <li><a class="dropdown-item" href="http://192.168.64.73/www/PNL/index.php">Total PnL [PHP] 🌹</a></li>
 
                     <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Clear_session') }}">Clear Site Cookies</a></li>
 
+                    <div class="dropdown-divider"></div>
+                    <div class="dropdown-header">[PHP] 🌹</div>
+
+                    <li><a class="dropdown-item" href="http://192.168.20.117:81/www/main.html">Main </a></li>
+                    <li><a class="dropdown-item" href="http://192.168.64.73/www/PNL/index.php">Total PnL </a></li>
+                    <li><a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_2/by_country/tableFLOATshowing2.html">Country Float </a></li>
+                    <li><a class="dropdown-item" href="http://192.168.64.73/www/PNL_FLOATshow_2/by_symbol/tableFLOATsymbol0.html">Symbol Float </a></li>
+
+
+
+                    <div class="dropdown-divider"></div>
+                    <div class="dropdown-header">Tableau</div>
+                    <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/Yesterday_PNLVOL?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link/">🤪Yesterday: Revenue & Volume by Entity</a></li>
+                    <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/CLUBS?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">🤪General View From Yesterday Trades</a></li>
+
+
+
+
                   </ul>
                 </li>
             {% endif %}
+
+            {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
+                <li class="nav-item dropleft">
+                  <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Tableau
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                    <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
+                    <div class="dropdown-divider"></div>
+
+                    <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/Yesterday_PNLVOL?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link/">🤪Yesterday: Revenue & Volume by Entity</a></li>
+                    <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/CLUBS?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">🤪General View From Yesterday Trades</a></li>
+
+
+                  </ul>
+                </li>
+            {% endif %}
+
 
             {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
                 <li class="nav-item dropleft">
@@ -522,84 +549,51 @@
 
 
 
-            {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
+
+
+
+
+              {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
                 <li class="nav-item dropleft">
-                  <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Google Sheets
+                  <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    BGI Data
                   </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1wBifOwaghe3lRsxRTRUMkTBEvLN8pmUWlHuGTuoXfFY/edit#gid=1332723419">Risk/Marketting Holiday Timing</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/18XuEl5m2NNItX5R5Qjsy_Qc9MZSZMuIYvYyQMqtY9Fc/edit?usp=sharing">MT4 Trading Timing ⌚ (Not Editable)</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1q9rK6i5kkbBM-xBg__aLX09AJExm26ffxwEtdq5c1YI/edit?usp=sharing">MT5 Trading Timing ⌚ (Not Editable)</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1taagIeZKA21f_u8qf3CXT3_hxvUCFGMpbxe01qX873o/edit#gid=0">Misc Data</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Risk Demo Login 🔑</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1sw-KXU0oKk7un4qHPLIAIg4sUa6rgWMMosJcpH7wmFk/edit#gid=0">Cambodia Swaps</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
 
-
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1aQ4bhEIkGkCyUBpT24ZspYrTxn_KP6ew42epM1CXITc/edit?usp=sharing">Withdrawal needs approval</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1DeH5oOq6TNwfRPxTPUEDvHnbwfWbDH40RNY8fr3SvRg/edit?usp=sharing">Risk System Emails</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Other Brokers Login</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
-                    <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change No Trade User Group</a></li>
-                    <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1U9qHiJyITUoXqsFDX9hL19i1zWQbTNedpb474X0n93U/edit#gid=0">MT5 Symbol Creation (BO and Risk)</a></li>
-
-
-
-
+                    <li><a class="dropdown-item" href="{{ url_for('main_app.Changed_readonly') }}">Changed Read Only</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('main_app.BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('swaps.cfh_oz_upload') }}">CFH OZ Upload</a></li>
                   </ul>
                 </li>
-
-                <li><a class="dropdown-item" href="{{ url_for('analysis.Client_trades_form') }}">Individual Client Trades</a></li>
-
-            {% endif %}
-
-
-
-
-
-
-            {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
-              <li class="nav-item dropleft">
-                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  BGI Data
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
-
-                  <li><a class="dropdown-item" href="{{ url_for('main_app.Changed_readonly') }}">Changed Read Only</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('main_app.BGI_Convert_Rate') }}">BGI FX Convert Rates</a></li>
-                  <li><a class="dropdown-item" href="{{ url_for('swaps.cfh_oz_upload') }}">CFH OZ Upload</a></li>
-                </ul>
-              </li>
               {% endif %}
-              </ul>
-              </li> <!-- End of Analytics Tab -->
-            {% endif %}
 
-            {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
-              <li class="nav-item dropleft">
-                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  M.Y 🌹
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+              {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
+                <li class="nav-item dropleft">
+                  <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    M.Y 🌹
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                    <div class="dropdown-header">[PHP] 🌹</div>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/mt5_esunny/mt5_daily_pnl_floating.php">MT5 Crypto Save</a>
+                    <a class="dropdown-item" href="http://202.88.105.3/www/PNL_FLOATshow/tableFLOATsymbol0_Tangsapwatthana_all.html">Tangsapwatthana BY Symbol</a>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_lw_comment_check.php">LW Comment Check</a>
+                    <a class="dropdown-item" href="http://192.168.20.117:81/www/check/index_mt4_lp_check.php">Check Mismatch</a>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/pro_bal_20/index_reg.php">P/B (REGDATE) > 20%</a>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/30s%201m/live123%201m.html">Mt4 trades within 1 min</a>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/pro_bal_20/avg_open_close_time_B1.php">Avg_time 3600s</a>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_lw_comment_check.php">leanwork comment check</a>
+                    <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_YJH_MARKDOWN.php">YJH markdown</a>
+                  </ul>
+                </li>
+              {% endif %}
 
-                  <a class="dropdown-item" href="http://192.168.64.73/www/mt5_esunny/mt5_daily_pnl_floating.php">MT5
-                    Crypto Save</a>
-                  <a class="dropdown-item" href="http://202.88.105.3/www/PNL_FLOATshow/tableFLOATsymbol0_Tangsapwatthana_all.html">Tangsapwatthana
-                    BY Symbol</a>
-                  <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_lw_comment_check.php">LW Comment Check</a>
-                  <a class="dropdown-item" href="http://192.168.20.117:81/www/check/index_mt4_lp_check.php">Check
-                    Mismatch</a>
 
-                  <a class="dropdown-item" href="http://192.168.64.73/www/pro_bal_20/index_reg.php">P/B (REGDATE) > 20%</a>
-                  <a class="dropdown-item" href="http://192.168.64.73/www/30s%201m/live123%201m.html">Mt4 trades within 1 min</a>
-                  <a class="dropdown-item" href="http://192.168.64.73/www/pro_bal_20/avg_open_close_time_B1.php">Avg_time 3600s</a>
-                  <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_lw_comment_check.php">leanwork comment check</a>
-                  <a class="dropdown-item" href="http://192.168.64.73/www/Others/index_YJH_MARKDOWN.php">YJH markdown</a>
-                </ul>
-              </li>
 
-            {% endif %}
+          </ul>
+        </li> <!-- End of Analytics Tab -->
+        {% endif %}
+
+
 
 
 
@@ -710,33 +704,16 @@
 
 
 
-
-
-
-
-        <!-- {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            SQ ✌
-          </a>
-
-          <div class="dropdown-menu dropdown-menu-right">
-
-
-
-          </div>
-        </li>
-        {% endif %} -->
-
         {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
 
         <li class="nav-item   dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown8" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Yudi 👾
+            Alerts and<br>Reports
           </a>
 
           <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown8">
-
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-header">👾</div>
 
 
             <li class="nav-item dropleft">
@@ -869,25 +846,42 @@
 
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown8">
 
-
-
-
-              <li class="nav-item dropleft">
-                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown11" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Tableau
-                </a>
-                <ul class="dropdown-menu pull-left" aria-labelledby="navbarDropdown11">
-                  <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
-                  <div class="dropdown-divider"></div>
-
-                  <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/Yesterday_PNLVOL?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link/">🤪Yesterday: Revenue & Volume by Entity</a></li>
-                  <li><a class="dropdown-item" href="http://202.88.105.5/views/Yesterday_Trades_0617/CLUBS?:showAppBanner=false&:display_count=n&:showVizHome=n&:origin=viz_share_link">🤪General View From Yesterday Trades</a></li>
-                </ul>
-              </li>
-
               <li class="nav-item dropdown">
 
+                {% if current_user.role in ["Admin", "Risk", "Risk_TW"] %}
+                    <li class="nav-item dropleft">
+                      <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Google Sheets
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1wBifOwaghe3lRsxRTRUMkTBEvLN8pmUWlHuGTuoXfFY/edit#gid=1332723419">Risk/Marketting Holiday Timing</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/18XuEl5m2NNItX5R5Qjsy_Qc9MZSZMuIYvYyQMqtY9Fc/edit?usp=sharing">MT4 Trading Timing ⌚ (Not Editable)</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1q9rK6i5kkbBM-xBg__aLX09AJExm26ffxwEtdq5c1YI/edit?usp=sharing">MT5 Trading Timing ⌚ (Not Editable)</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1taagIeZKA21f_u8qf3CXT3_hxvUCFGMpbxe01qX873o/edit#gid=0">Misc Data</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Risk Demo Login 🔑</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1sw-KXU0oKk7un4qHPLIAIg4sUa6rgWMMosJcpH7wmFk/edit#gid=0">Cambodia Swaps</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
 
+
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1aQ4bhEIkGkCyUBpT24ZspYrTxn_KP6ew42epM1CXITc/edit?usp=sharing">Withdrawal needs approval</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1DeH5oOq6TNwfRPxTPUEDvHnbwfWbDH40RNY8fr3SvRg/edit?usp=sharing">Risk System Emails</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/12U-6eBDk3b_6VJnfAW6zP6rEKnJcKP_hRmcmoPKUtgA/edit?usp=sharing">Other Brokers Login</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1h7YOJPwF2HUCXaHsY9Y0lBm6Yv7gMCKNBHmFoldhAx4/edit#gid=0">OZ Margin hub whitelist</a></li>
+                        <li><a class="dropdown-item bg_a_lighter_green" href="http://192.168.64.73/All/Change_User_Group_V1%20.1/">Change No Trade User Group</a></li>
+                        <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1U9qHiJyITUoXqsFDX9hL19i1zWQbTNedpb474X0n93U/edit#gid=0">MT5 Symbol Creation (BO and Risk)</a></li>
+
+
+
+
+                      </ul>
+                    </li>
+
+                    <li><a class="dropdown-item" href="{{ url_for('analysis.Client_trades_form') }}">Individual Client Trades</a></li>
+
+                {% endif %}
+
+
+              <li><a class="dropdown-item" href="http://202.88.105.5/">BGI Tableau Server</a></li>
               <li><a class="dropdown-item" href="https://primexm.com/xcore-modules/">Prime XM Help</a></li>
 
               <li><a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a></li>
