Fixing Client Net Individual Symbol Issue

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -372,7 +372,12 @@
 
                     <li><a class="dropdown-item" href="{{ url_for('Risk_Client_Tools_bp.noopentrades_changegroup') }}">⭐➕ Change Group </br>(No Open Trades)</a></li>
                     <!-- bg_a_light_green -->
+                    <div class="dropdown-divider"></div>
                     <li><a class="dropdown-item " href="{{ url_for('notifications_bp.Client_No_Symbol_Trades') }}">⭐ Client No Open symbol Position Alert</a></li>
+                    <li><a class="dropdown-item " href="{{ url_for('notifications_bp.Include_Client_No_Trades') }}">➕ Client No Open symbol Position Alert [Include]</a></li>
+                    <div class="dropdown-divider"></div>
+
+
                     <li><a class="dropdown-item" href="{{ url_for('notifications_bp.Large_volume_Login') }}">⭐ Large Volume Traders</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('analysis.Client_Comment_Scalp') }}">⭐ Client Comment Scalp</a></li>
                     <div class="dropdown-divider"></div>
